update upload files

--- a/video.html
+++ b/video.html
@@ -9,7 +9,7 @@
 <body>
     <video id="video" controls></video>
     <script>
-        const accessToken = 'ya29.a0AWY7CklH5G3NOLj0fFrvAu5vTLiU741PuItEyOOcYaIV-7AHDvwmY-RMTJNIEhL-Joa8Yk1UTE4ThEtjtMAfdynBeDoW0DaHqZs8IrozqQ2r9sIjG_aYy0TyS05qd4LIoVO-4RQ6V2ZFuZbSbJ8u1X_9xt5TaCgYKAdQSARASFQG1tDrp0YD0COszTpNIAA7TRE5OEA0163';
+        const accessToken = '...';
         const videoUrl = 'https://storage.googleapis.com/vqe-enhanced-videos/videoplayback-16secs-360p.mp4';
         const videoElement = document.getElementById('video');
         fetch(videoUrl, {
